testfiles/k8s/arx.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: arx
spec:
  controllerName: "situ.net/arx"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  namespace: authly-test
  name: arx
spec:
  gatewayClassName: arx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: v1
kind: Service
metadata:
  namespace: authly-test
  name: arx
spec:
  # Setting up the gateway at loadbalancer:
  type: LoadBalancer
  selector:
    app: arx
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arx
  namespace: authly-test
  labels:
    app: arx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arx
  template:
    metadata:
      labels:
        app: arx
    spec:
      serviceAccountName: arx
      enableServiceLinks: false
      containers:
      - name: arx
        image: protojour/arx:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
          - name: authly-ca
            mountPath: /etc/authly/local
      volumes:
        - name: authly-ca
          configMap:
            name: authly-local-ca.crt
