testfiles/k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: memoriam-gateway
spec:
  controllerName: "situ.net/memoriam-gateway"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  namespace: authly-test
  name: memoriam-gateway
spec:
  gatewayClassName: memoriam-gateway
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
---
# Routing from the gateway into authly
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: authly-test
  name: authly-routing
spec:
  parentRefs:
    - name: memoriam-gateway
  rules:
    - matches:
        - path:
            value: /authly/api/auth
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /api/auth
      backendRefs:
        - name: authly
          port: 443
    - matches:
        - path:
            value: /authly/web/auth
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /web/auth
      backendRefs:
        - name: authly
          port: 443
    - matches:
        - path:
            value: /authly
      filters:
        - type: ExtensionRef
          extensionRef:
            group: authly.id
            kind: Service
            name: authn
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: authly
          port: 443
---
apiVersion: v1
kind: Service
metadata:
  namespace: authly-test
  name: gateway
spec:
  # Setting up the gateway at loadbalancer:
  type: LoadBalancer
  selector:
    app: gateway
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: authly-test
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      serviceAccountName: gateway
      enableServiceLinks: false
      containers:
      - name: testservice
        image: situ/memoriam:dev
        command: ["/memoriam", "gateway"]
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
          - name: authly-ca
            mountPath: /etc/authly/local
      volumes:
        - name: authly-ca
          configMap:
            name: authly-local-ca.crt
