testfiles/k8s/authly.yaml

# The Authly API service:
apiVersion: v1
kind: Service
metadata:
  namespace: authly-test
  name: authly
spec:
  selector:
    app: authly
  ports:
  - name: api
    protocol: TCP
    port: 443
    targetPort: 443
---

# The Authly service for k8s authentication:
apiVersion: v1
kind: Service
metadata:
  namespace: authly-test
  name: authly-k8s
spec:
  selector:
    app: authly
  ports:
  - name: k8s-auth-api
    protocol: TCP
    port: 443
    targetPort: 2443
---

# The Authly cluster headless service.
# Only used for Authly pods talking to themselves and other authly pods part of the same Authly cluster:
apiVersion: v1
kind: Service
metadata:
  namespace: authly-test
  name: authly-cluster
spec:
  clusterIP: None
  selector:
    app: authly
  ports:
    - name: cluster-api
      protocol: TCP
      port: 7855
      targetPort: 7855
    - name: cluster-raft
      protocol: TCP
      port: 7856
      targetPort: 7856
---

# The Authly network policy:
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authly-network-policy
  namespace: authly-test
spec:
  podSelector:
    matchLabels:
      app: authly
  policyTypes:
  - Ingress
  ingress:
  # Open up 443 (authly server port) and 2443 (authly k8s auth port) to every pod:
  - ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 2443
  # Open up the cluster ports to the Authly pod only:
  - ports:
    - protocol: TCP
      port: 7855
    - protocol: TCP
      port: 7856
    from:
    - podSelector:
        matchLabels:
          app: authly
---

# The Authly StatefulSet, which ultimately deploys:
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: authly-test
  name: authly
  labels:
    app: authly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authly
  serviceName: authly-cluster
  template:
    metadata:
      labels:
        app: authly
    spec:
      serviceAccountName: authly
      containers:
        - name: authly-dev
          image: situ/authly:dev
          command: ["/authly", "serve"]
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 443
            - containerPort: 2443
            - containerPort: 7855
            - containerPort: 7856
          # livenessProbe:
          #   httpGet:
          #     scheme: HTTP
          #     port: 8200
          #     path: /health
          #   initialDelaySeconds: 10
          #   periodSeconds: 30
          volumeMounts:
            - mountPath: /var/lib/authly
              name: authly-data
            - mountPath: /etc/authly/cluster
              readOnly: true
              name: authly-cluster-key
            - mountPath: /etc/authly/documents
              readOnly: true
              name: authly-documents
          resources:
            requests:
              memory: 32Mi
              cpu: 100m
      volumes:
        - name: authly-cluster-key
          secret:
            secretName: authly-cluster-key
        - name: authly-documents
          configMap:
            name: authly-documents
  volumeClaimTemplates:
    - metadata:
        name: authly-data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: 256Mi
        # In case you want to specify the storage class.
        # You should always(!) prefer local over some replicated abstraction layer.
        # Authly cares about replication itself already.
        #storageClassName: local-path
